# agentic_safety

./: .dockerignore  .gitignore  404.html  Agentic_Safety_Full_Docs.md  CITATION.cff  CONTRIBUTIONS.md  Dockerfile  LICENSE  PROJECT_PROGRESS.md  README.md  __init__.py  build_report.py  count_pages.py  fix.py  generate_100_owasp_aai.py  generate_creative_jailbreaks.py  generate_dataset.py  index.html  main.py  mkdocs.yml  patch.py  patch2.py  patch3.py  patch_pair.py  pyproject.toml  requirements-docs.txt  run copy.py  run.py  run_all_evals.sh  run_all_qwen.sh  setup_dummy_sandbox.sh  sitemap.xml  skills-lock.json
attacks/: __init__.py  adaptools.py  crescendo.py  gcg.py  hybrid_loop.py  index.html  pair.py  prompt_fusion.py  stac.py
configs/: agentic_5_safe.yaml  eval_crescendo_ctf50_deepseek_r1_7b.yaml  eval_crescendo_ctf50_llama3_1_latest.yaml  eval_crescendo_ctf50_llama3_2_latest.yaml  eval_crescendo_ctf50_llama3_3_70b.yaml  eval_crescendo_ctf50_qwen3_14b.yaml  eval_crescendo_ctf50_qwen3_1_7b.yaml  eval_crescendo_ctf50_qwen3_30b.yaml  eval_deepseek_attacker_pair15.yaml  eval_genai_pair_localjudge_100.yaml  eval_genaistudio_pair_apijudge_100.yaml  eval_llama3_baseline.yaml  eval_pair_500_v2.yaml  eval_qwen_agentshield_pair.yaml  eval_qwen_baseline.yaml  eval_qwen_crescendo_attack.yaml  eval_qwen_gcg_attack.yaml  eval_qwen_pair_attack.yaml  eval_qwen_pair_geminijudge.yaml  eval_qwen_progent.yaml  eval_qwen_stepshield.yaml  eval_qwen_stepshield_pair.yaml  generate_crescendo_suite.py  generate_defense_suite.py  generate_yamls.py  smoke_deepseek_multiattack.yaml
data/: DATASET_CARD.md  advanced_jailbreak_samples_v2.json  (+19 more)
(+319 files in other folders)
